--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Jay Patel",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^5.13.0",
     "nodemon": "^2.0.9"
   }
 }
