--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha tests/**/*Tests.js",
     "start": "nodemon index.js"
   },
   "author": "Jay Patel",
@@ -15,5 +15,10 @@
     "express": "^4.17.1",
     "mongoose": "^5.13.0",
     "nodemon": "^2.0.9"
+  },
+  "devDependencies": {
+    "mocha": "^9.0.2",
+    "should": "^13.2.3",
+    "sinon": "^11.1.1"
   }
 }
