--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "mocha": "^9.0.2",
     "should": "^13.2.3",
-    "sinon": "^11.1.1"
+    "sinon": "^11.1.1",
+    "supertest": "^6.1.3"
   }
 }
